diplom,part2,iter3